--- a/netlify.toml
+++ b/netlify.toml
@@ -22,3 +22,11 @@
   to = "https://blog.mbktechstudio.com/post/terms-and-conditions/"
   status = 200
   force = true
+
+
+[[redirects]]
+  from = "/_astro/*"
+  to = "https://blog.mbktechstudio.com/:splat"
+  status = 200
+
+ 
