--- a/netlify.toml
+++ b/netlify.toml
@@ -1,32 +1,18 @@
-#[[redirects]]
-#  from = "https://privacy-mbktechstudio.netlify.app/*"
-#  to = "https://privacy.mbktechstudio.com/:splat"
-#  status = 301
-#  force = true
+[[redirects]]
+  from = "https://privacy-mbktechstudio.netlify.app/*"
+  to = "https://privacy.mbktechstudio.com/:splat"
+  status = 301
+  force = true
 
 # The following redirect is intended for use with most SPAs that handle
 # routing internally.
-#[[redirects]]
-#  from = "/*"
-#  to = "/index.html"
-#  status = 200
-
-#[[headers]]
-  # Define which paths this specific [[headers]] block will cover.
-#  for = "/*"
-#    [headers.values]
-#    Access-Control-Allow-Origin = "*"
-
 [[redirects]]
   from = "/*"
-  to = "https://blog.mbktechstudio.com/post/terms-and-conditions/"
-  status = 200
-  force = true
-
-
-[[redirects]]
-  from = "/_astro/*"
-  to = "https://blog.mbktechstudio.com/:splat"
+  to = "/index.html"
   status = 200
 
- 
+[[headers]]
+  # Define which paths this specific [[headers]] block will cover.
+  for = "/*"
+    [headers.values]
+    Access-Control-Allow-Origin = "*"
